apps/smart-home/homeassistant/base/resources/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homeassistant
spec:
  revisionHistoryLimit: 3
  replicas: 1
  strategy:
    type: Recreate
  template:
    spec:
      containers:
      - name: home-assistant-app
        image: ghcr.io/home-assistant/home-assistant
        imagePullPolicy: IfNotPresent
        securityContext:
          privileged: null
        ports:
          - name: http
            containerPort: 8123
            protocol: TCP
        resources: {}
        livenessProbe:
          httpGet:
            path: /manifest.json
            port: http
          initialDelaySeconds: 0
          failureThreshold: 3
          timeoutSeconds: 1
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /manifest.json
            port: http
          initialDelaySeconds: 0
          failureThreshold: 3
          timeoutSeconds: 1
          periodSeconds: 10
        startupProbe:
          tcpSocket:
            port: 8123
          initialDelaySeconds: 0
          failureThreshold: 30
          timeoutSeconds: 1
          periodSeconds: 5
        volumeMounts:
          - name: ha-config-root
            mountPath: /config
      restartPolicy: Always
      volumes:
        - name: ha-config-root
          persistentVolumeClaim:
            claimName: homeassistant-config
