apps/smart-home/homeassistant/base/resources/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name:  homeassistant
spec:
  ports:
  - port: 8123
